<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="48dp"
    tools:context=".ui.RegisterFragment">


    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/tv_profile_label"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_profile_edit_text"
        android:ems="10"
        android:hint="@string/et_profile_username_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darker_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_title" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_profile_edit_text"
        android:ems="10"
        android:hint="@string/et_profile_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darker_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_profile_edit_text"
        android:ems="10"
        android:hint="@string/et_profile_birth_hint"
        android:importantForAutofill="no"
        android:inputType="datetime|date"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darker_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_profile_edit_text"
        android:ems="10"
        android:hint="@string/et_profile_address_hint"
        android:importantForAutofill="no"
        android:inputType="text|textPostalAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darker_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_birth_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_update_profile"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_logout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>